--- a/MovieBooking/MovieBookingSPA/src/app/identity/identity.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/identity/identity.component.html
@@ -1,1 +1,12 @@
-<p>identity works!</p>
+<div class="container-fluid" style="background-color: rgb(50, 159, 209); height: 94vh">
+    <div class="row h-80 justify-content-center align-items-center" style="height: 75vh;">
+        <div class="col-15 col-lg-3 mx-auto bg-light">
+
+            <div class="row">
+                <div class="col-15">
+                    <router-outlet></router-outlet>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
