feat Implemented header structure

--- a/MovieBooking/MovieBookingSPA/src/app/app.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>Movie ticket booking application</h1>
-
+<div class="row" *ngIf="this.router.url === '/identity/login'">
+    <h1>Movie ticket booking application</h1>
+</div>
 <router-outlet></router-outlet>
