--- a/MovieBooking/MovieBookingSPA/src/app/identity/identity.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/identity/identity.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid" style="background-color: rgb(50, 159, 209); height: 94vh">
+<app-header></app-header>
+<div class="container-fluid" style="background-color: rgb(50, 159, 209); height: 91vh">
     <div class="row h-80 justify-content-center align-items-center" style="height: 75vh;">
         <div class="col-15 col-lg-3 mx-auto bg-light">
 
