--- a/MovieBooking/MovieBookingSPA/src/app/main-page/header/header.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/main-page/header/header.component.html
@@ -1,43 +1,41 @@
-<div class="row" style="background-color: rgb(50, 159, 209)">
-    <div>
-        <nav class="navbar navbar-expand navbar-dark" style="background-color: rgb(50, 159, 209)">
-            <div class="navbar-brand mx-auto" style="color:rgb(152, 207, 232);">
-                <h3><b><i>Movie Tickets Booking</i></b></h3>
-            </div>
-                
-            <div class="form-group">
-                <input 
-                id="query" 
-                type="text" 
-                class="form-control" 
-                placeholder="Search for movie"
-                size="20"
-                style="background-color: white;color: rgb(50, 159, 209);"
-                (keyup.enter)="getMovie()">
-                <a class="nav-link" (click)="advancedSearch()" style="font-size: 10px; color:rgb(152, 207, 232); float: right;">Advanced search</a>
-            </div>
+<div style="background-color: rgb(50, 159, 209)">
+    <nav class="navbar navbar-expand navbar-dark" style="background-color: rgb(50, 159, 209)">
+        <div class="navbar-brand mx-auto" style="color:rgb(152, 207, 232);">
+            <h3><b><i>Movie Tickets Booking</i></b></h3>
+        </div>
+            
+        <div class="form-group" *ngIf="!appState?.isEmpty()">
+            <input 
+            id="query" 
+            type="text" 
+            class="form-control" 
+            placeholder="Search for movie"
+            size="20"
+            style="background-color: white;color: rgb(50, 159, 209);"
+            (keyup.enter)="getMovie()">
+            <a class="nav-link" (click)="advancedSearch()" style="font-size: 10px; color:rgb(152, 207, 232); float: right;">Advanced search</a>
+        </div>
 
-            <!--
-            <select name="cars" id="cars" class="form-control" style="width: auto">
-                <option value="volvo">Title</option>
-                <option value="saab">Year</option>
-                <option value="opel">Runtime</option>
-                <option value="audi">Audi</option>
-              </select>
-              
-            -->  
+        <!--
+        <select name="cars" id="cars" class="form-control" style="width: auto">
+            <option value="volvo">Title</option>
+            <option value="saab">Year</option>
+            <option value="opel">Runtime</option>
+            <option value="audi">Audi</option>
+            </select>
+            
+        -->  
 
-            <div class="navbar-nav" style="text-align: center;  margin-right: 55px;">
-                <div class="dropdown">
-                    <span class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:rgb(152, 207, 232); ">
-                        {{ appState?.username }}
-                    </span>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" (click)="profile()">My profile</a>
-                        <a class="dropdown-item" (click)="logout()">Logout</a>
-                    </div>
+        <div class="navbar-nav" style="text-align: center;  margin-right: 55px;"  *ngIf="!appState?.isEmpty()">
+            <div class="dropdown">
+                <span class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:rgb(152, 207, 232); ">
+                    {{ appState?.username }}
+                </span>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" (click)="profile()">My profile</a>
+                    <a class="dropdown-item" (click)="logout()">Logout</a>
                 </div>
             </div>
-        </nav>
-    </div>
+        </div>
+    </nav>
 </div>
