feat [Angular] Added sidebar

--- a/MovieBooking/MovieBookingSPA/src/app/identity/feature-user-info/change-user-info/change-user-info.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/identity/feature-user-info/change-user-info/change-user-info.component.html
@@ -1,5 +1,9 @@
-<app-header></app-header>
-<div style="margin: 1vh 2vh 2vh 2vh; width: 50%;">
+<div style="
+    overflow: hidden;
+    width: 70%;
+    float: left;
+    margin: 1vh 2vh 2vh 2vh;
+    ">
 
     <div class="tab">
         <button (click)="option('changePassword')" [ngClass]="isActive('changePassword')">Password</button>
