--- a/MovieBooking/MovieBookingSPA/src/app/app.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<app-header></app-header>
+
+<div id="body">
+    <app-sidebar></app-sidebar>
+    <div>
+        <router-outlet></router-outlet>
+    </div>
+</div>
+
