--- a/MovieBooking/MovieBookingSPA/src/app/identity/feature-user-info/user-profile/user-profile.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/identity/feature-user-info/user-profile/user-profile.component.html
@@ -1,12 +1,10 @@
-<app-header></app-header>
-<br>
 <div style="margin: 20px">
     <h3 style="color: rgb(50, 159, 209)">{{ appState.username }}'s profile
         <span class="h6">
             <a [routerLink]="['changeuserinfo']">Edit profile</a>
         </span>
     </h3>
-    <table class="table table-bordered" style="border-color:rgb(152, 207, 232)">
+    <table class="table table-bordered" style="border-color:rgb(152, 207, 232);width: 80%;">
     <tbody>
         <tr>
             <td class="first-column">First name</td>
