added delete function

--- a/MovieBooking/MovieBookingSPA/src/app/discount/discount.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/discount.component.html
@@ -9,6 +9,9 @@
         <li>
             <a [routerLink]="['coupons_list']">LIST OF ALL COUPONS</a>
         </li>
+        <li>
+            <a [routerLink]="['delete_coupon']">DELETE COUPON</a>
+        </li>
     </ul>
     
     <router-outlet></router-outlet>
