added update function, but having some bugs

--- a/MovieBooking/MovieBookingSPA/src/app/discount/discount.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/discount.component.html
@@ -10,6 +10,9 @@
             <a [routerLink]="['coupons_list']">LIST OF ALL COUPONS</a>
         </li>
         <li>
+            <a [routerLink]="['update_coupon']">UPDATE COUPON</a>
+        </li>
+        <li>
             <a [routerLink]="['delete_coupon']">DELETE COUPON</a>
         </li>
     </ul>
