--- a/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-update-form/coupon-update-form.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-update-form/coupon-update-form.component.html
@@ -1,8 +1,8 @@
 <br>
 
-<h4> Create new coupon</h4>
+<h4> Update coupon</h4>
 
-<form [formGroup]="couponForm" (ngSubmit)="onCouponFormSubmit()" class="form">
+<form [formGroup]="couponForm" (ngSubmit)="onCouponUpdate()" class="form">
     <div class="form-group">
         <label class="form-label">id</label>
         <input type="text" formControlName="id" class="form-control">
@@ -10,7 +10,7 @@
 
     <div>
         <label class="form-label">movie name</label>
-        <input type="text" formControlName="movieName" class="form-control">
+        <input type="string" formControlName="movieName" class="form-control">
     </div>
 
     <div>
