fix [Angular] Sidebar updated

--- a/MovieBooking/MovieBookingSPA/src/app/app.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div id="body">
     <app-sidebar></app-sidebar>
-    <div>
+    <div [ngClass] = "isAuthenticated()">
         <router-outlet></router-outlet>
     </div>
 </div>
