--- a/MovieBooking/MovieBookingSPA/src/app/main-page/header/header.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/main-page/header/header.component.html
@@ -4,7 +4,7 @@
             <h3><b><i><a (click)="mainPage()">Movie Tickets Booking</a></i></b></h3>
         </div>
             
-        <div class="form-group" *ngIf="!appState?.isEmpty()">
+        <div class="form-group" *ngIf="isMainPage()">
             <input 
             id="query" 
             type="text" 
