fix [Angular] Fixed messages when server isn't active

--- a/MovieBooking/MovieBookingSPA/src/app/identity/feature-authentication/login-form/login-form.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/identity/feature-authentication/login-form/login-form.component.html
@@ -22,7 +22,7 @@
         </span>
     </div>
     
-    <div class="form-group">
+    <div class="form-group" style="padding-bottom: 10px">
         <span *ngIf="showServerError" class="error">Wrong username/email or password</span>
     </div>
     
