--- a/MovieBooking/MovieBookingSPA/src/app/identity/feature-authentication/register-form/register-form.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/identity/feature-authentication/register-form/register-form.component.html
@@ -73,7 +73,7 @@
     </div>
 
     
-    <div class="form-group">
+    <div class="form-group" style="padding-bottom: 10px">
         <span *ngIf="showServerError" class="error">Username or email already in use</span>
     </div>
 
