--- a/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-list/coupon-list/coupon-list.component.css
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-list/coupon-list/coupon-list.component.css
@@ -1,10 +1,13 @@
 table {
     border-collapse: collapse;
     width: 100%;
-    border: 1px solid;
   }
 
 td {
-    border: 1px solid;
     width: 30%;
+}
+
+
+thead {
+  background-color:lightskyblue;
 }
