--- a/MovieBooking/MovieBookingSPA/src/app/main-page/header/header.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/main-page/header/header.component.html
@@ -17,7 +17,7 @@
         </div>
 
        
-        <select name="criteria" id="criteria" class="form-select" style="width: auto; margin-right: 10px; margin-bottom: 15px;">
+        <select *ngIf="!appState?.isEmpty()" name="criteria" id="criteria" class="form-select" style="width: auto; margin-right: 10px; margin-bottom: 15px;">
             <option value="title">Title</option>
             <option value="mainActor">Main Actor</option>
             <option value="genre">Genre</option>
