Refactoring theater-hall module

--- a/MovieBooking/MovieBookingSPA/src/app/theater-hall/theater-hall-form/theater-hall-form.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/theater-hall/theater-hall-form/theater-hall-form.component.html
@@ -1,5 +1,6 @@
-<button class="btn btn-primary" 
-        (click)="open(mymodal)">
+<button class="btn btn-primary pos" 
+        (click)="open(mymodal)"
+        style="margin-top: 20px; margin-right: 20px">
         Add new Theater Hall
 </button>
    
