--- a/MovieBooking/MovieBookingSPA/src/app/theater-hall/theater-hall.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/theater-hall/theater-hall.component.html
@@ -1,12 +1,12 @@
-<div style="background-color: rgb(50, 159, 209)">
-    <nav class="navbar navbar-expand navbar-dark" style="background-color: rgb(50, 159, 209)">
-        
-        <div class="navbar-brand mx-auto" style="color:rgb(152, 207, 232);">
-            <h3><b><i>Theater Halls</i></b></h3>
+<div>
+    <nav class="navbar navbar-expand">
+        <div class="navbar-brand">
+            <h3 style="color: grey; margin-top:10px; margin-left: 10px;"><b><i>Theater Halls</i></b></h3>
         </div>
-            
+ 
         <app-theater-hall-form style="padding-right: 15px;"></app-theater-hall-form>
     </nav>
+    <hr>
 </div>
 
 <app-theater-hall-list></app-theater-hall-list>
