fix [Angular] Fix sidebar covering site name

--- a/MovieBooking/MovieBookingSPA/src/app/main-page/header/header.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/main-page/header/header.component.html
@@ -1,7 +1,7 @@
 <div style="background-color: rgb(50, 159, 209)">
     <nav class="navbar navbar-expand navbar-dark" style="background-color: rgb(50, 159, 209)">
         <div class="navbar-brand mx-auto" style="color:rgb(152, 207, 232);">
-            <h3><b><i><a (click)="mainPage()">Movie Tickets Booking</a></i></b></h3>
+            <h3 style="margin-left: 140px"><b><i><a (click)="mainPage()">Movie Tickets Booking</a></i></b></h3>
         </div>
             
         <div class="form-group" *ngIf="isMainPage()" style="margin-right:5px">
