Added reservations in sidebar

--- a/MovieBooking/MovieBookingSPA/src/app/main-page/sidebar/sidebar.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/main-page/sidebar/sidebar.component.html
@@ -4,6 +4,7 @@
         <div class="sidebar-field" (click)="profile()">Profile</div>
         <div *ngIf="isAdmin()" class="sidebar-field" (click)="theaterHall()">Theater Hall</div>
         <div *ngIf="isAdmin()" class="sidebar-field" (click)="projection()">Projection</div>
+        <div class="sidebar-field" (click)="reservations()">Reservations</div>
         <div class="sidebar-field" (click)="logout()">Sign Out</div>
     </div>    
 </div>
