--- a/MovieBooking/MovieBookingSPA/src/app/reservations/reservations.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/reservations/reservations.component.html
@@ -4,7 +4,7 @@
             <h3 style="color: grey; margin-top:10px; margin-left: 10px;"><b><i>Reservations</i></b></h3>
         </div>
 
-        <button class="btn btn-primary pos">Checkout</button>
+        <button class="btn btn-primary pos" (click)="onCheckout()">Checkout</button>
     </nav>
 </div>
 <app-reservations-list></app-reservations-list>
