--- a/MovieBooking/MovieBookingSPA/src/app/theater-hall/theater-hall-list/theater-hall-list.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/theater-hall/theater-hall-list/theater-hall-list.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let theaterHall of theaterHalls" style="padding-left:15px; padding-top: 15px;">
+<div *ngFor="let theaterHall of theaterHalls | sortByTheaterHallName" style="padding-left:15px; padding-top: 15px;">
     <h4>{{theaterHall.name}}</h4>
     <a [routerLink]="['/theater-hall', theaterHall.id]" class="btn btn-primary">See more</a>
     <hr>
