--- a/MovieBooking/MovieBookingSPA/src/app/main-page/header/header.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/main-page/header/header.component.html
@@ -6,25 +6,29 @@
             
         <div class="form-group wide" *ngIf="isMainPage()" style="margin-right:5px">
             <input 
-            id="query" 
+            id="searchBarWide" 
             type="text" 
             class="form-control" 
             placeholder="{{ searchCriteriaPlaceholderText}}"
             size="20"
             style="background-color: white;color: rgb(50, 159, 209);"
-            (keyup.enter)="getMovie()">
+            autocomplete="off"
+            #searchBarWide
+            (keyup.enter)="search(searchBarWide.value)">
             <a class="nav-link" (click)="advancedSearch()" style="font-size: 10px; color:rgb(152, 207, 232); float: right;">Advanced search</a>
         </div>
 
         <div class="form-group narrow" *ngIf="isMainPage()" style="margin-right:5px">
             <input 
-            id="query" 
+            id="searchBarNarrow" 
             type="text" 
             class="form-control" 
             placeholder="Search"
             size="20"
             style="background-color: white;color: rgb(50, 159, 209);"
-            (keyup.enter)="getMovie()">
+            autocomplete="off"
+            #searchBarNarrow
+            (keyup.enter)="search(searchBarNarrow.value)">
             <a class="nav-link" (click)="advancedSearch()" style="font-size: 10px; color:rgb(152, 207, 232); float: right;">Advanced search</a>
         </div>
 
