--- a/MovieBooking/MovieBookingSPA/src/app/projection/projection-form/projection-form.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/projection/projection-form/projection-form.component.html
@@ -15,7 +15,6 @@
             <div class="form-group flex-column">
                 <label for="movieId">Select movie</label>
                 <select
-                    style="width: 200px;"
                     class="custom-select mb-3"
                     (change)="changeMovie($event)"
                     id="movieId"
@@ -31,21 +30,17 @@
 
             <div class="form-group">
                 <label for="projectionDate">Date</label>
-                <input type="text" id="projectionDate" class="form-control form-control-sm"
+                <input type="date" id="projectionDate" class="form-control form-control-sm"
                     formControlName="projectionDate" />
 
                 <span *ngIf="showFormErrors && projectionDate?.errors?.['required']" class="error">
                     Date is required
-                </span>
-                <span *ngIf="showFormErrors && projectionDate?.errors?.['pattern']" class="error">
-                    Date is not in the correct format (YYYY-MM-DD)
                 </span>
             </div>
             
             <div class="form-group flex-column" style="margin-top: 10px;">
                 <label for="theaterHallId">Select theater hall</label>
                 <select
-                    style="width: 200px;"
                     class="custom-select mb-3"
                     (change)="changeTheaterHall($event)"
                     id="theaterHallId"
@@ -62,7 +57,6 @@
             <div *ngIf="theaterHallFromForm" class="form-group flex-column">
                 <label for="theaterHallTerm">Select time</label>
                 <select
-                    style="width: 200px;"
                     class="custom-select mb-3"
                     (change)="changeTheaterHallTerm($event)"
                     id="theaterHallTerm"
@@ -78,7 +72,8 @@
 
             <div class="form-group">
                 <label for="price">Price</label>
-                <input type="text" id="price" class="form-control form-control-sm"
+                <input type="text" id="price" 
+                    class="form-control form-control-sm "
                     formControlName="price" />
 
                 <span *ngIf="showFormErrors && price?.errors?.['required']" class="error">
