Changed type of input from text to number for numbers

--- a/MovieBooking/MovieBookingSPA/src/app/projection/projection-form/projection-form.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/projection/projection-form/projection-form.component.html
@@ -72,7 +72,7 @@
 
             <div class="form-group">
                 <label for="price">Price</label>
-                <input type="text" id="price" 
+                <input type="number" id="price" 
                     class="form-control form-control-sm "
                     formControlName="price" />
 
