--- a/MovieBooking/MovieBookingSPA/src/app/projection/projection-info/projection-info.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/projection/projection-info/projection-info.component.html
@@ -132,7 +132,7 @@
             
                 <div class="form-group">
                     <label for="price">Price</label>
-                    <input type="text" id="price" class="form-control form-control-sm"
+                    <input type="number" id="price" class="form-control form-control-sm"
                         formControlName="price" />
     
                     <span *ngIf="showFormErrors && price?.errors?.['required']" class="error">
