--- a/MovieBooking/MovieBookingSPA/src/app/theater-hall/theater-hall-form/theater-hall-form.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/theater-hall/theater-hall-form/theater-hall-form.component.html
@@ -25,7 +25,7 @@
 
                 <div class="form-group" style="margin-top: 10px;">
                     <label for="numberOfSeats">Number Of Seats</label>
-                    <input type="text" id="numberOfSeats" class="form-control form-control-sm"
+                    <input type="number" id="numberOfSeats" class="form-control form-control-sm"
                         formControlName="numberOfSeats" />
 
                     <span *ngIf="showFormErrors && numberOfSeats?.errors?.['required']" class="error">
