fixed TotalPrice in administration

--- a/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-list/coupon-list/coupon-list.component.css
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-list/coupon-list/coupon-list.component.css
@@ -1,6 +1,8 @@
 table {
     border-collapse: collapse;
     width: 100%;
+    font-family: 'Comic Sans MS';
+    font-size: large;
   }
 
 td {
@@ -10,4 +12,5 @@ td {
 
 thead {
   background-color:lightskyblue;
+  font-size: larger;
 }
