--- a/MovieBooking/MovieBookingSPA/src/app/reservations/reservations-list/reservations-list.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/reservations/reservations-list/reservations-list.component.html
@@ -1,4 +1,4 @@
-<table class="table">
+<table class="table" style=" text-align: left;">
     <thead>
         <tr>
         <th scope="col">Title</th>
@@ -13,7 +13,7 @@
     </thead>
     <tbody *ngFor="let reservationsByMovie of reservations | keyvalue">
         <tr *ngFor="let reservationByProjection of reservationsByMovie.value | keyvalue">
-        <td>{{reservationByProjection.value.movieTitle}}</td>
+        <td >{{reservationByProjection.value.movieTitle}}</td>
         <td>{{reservationByProjection.value.projectionDate}}</td>
         <td>{{reservationByProjection.value.projectionTerm}}</td>
         <td>{{reservationByProjection.value.theaterHallName}}</td>
@@ -51,6 +51,9 @@
                     <span *ngIf="showServerErrors" class="error">
                         {{errMsg}}
                     </span>
+                    <span *ngIf="processing" class="error" class="msg">
+                        Your request is being processed
+                    </span>
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-outline-dark" (click)="onProjectionReserveFormSubmit(reservationByProjection.value)">Update</button>
@@ -86,5 +89,5 @@
 </table>
 
 <div class="container">
-    <h6>Total price: {{totalPrice}}</h6>
+    <h6><b>TOTAL PRICE: {{totalPrice}}</b></h6>
 </div>
