--- a/MovieBooking/MovieBookingSPA/src/app/reservations/reservations.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/reservations/reservations.component.html
@@ -4,7 +4,72 @@
             <h3 style="color: grey; margin-top:10px; margin-left: 10px;"><b><i>Reservations</i></b></h3>
         </div>
 
-        <button class="btn btn-primary pos" (click)="onCheckout()">Checkout</button>
+        <div class="pos">
+            <!--Delete button--> 
+            <button 
+            class="btn" 
+            style="background-color: rgba(161, 0, 0, 0.862); color: aliceblue"
+            (click)="open(deleteModal)">
+                Delete All
+            </button>
+            <ng-template #deleteModal let-modal>
+                <div class="modal-header">
+                    <h4 class="modal-title" id="modal-basic-title">Confirm action</h4>            
+                    <button type="button" class="close" aria-label="Close" (click)="close()">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete all reservations?</p>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-outline-dark" (click)="deleteAll()">Yes</button>
+                    <button class="btn btn-outline-dark" (click)="close()">No</button>
+                </div>
+            </ng-template>
+
+            <!--Chekout button--> 
+            <button class="btn btn-primary" 
+            style="margin-left: 10px;" 
+            (click)="open(chekoutModal)">
+                Chekout
+            </button>
+
+            <ng-template #chekoutModal let-modal>
+            <div class="modal-header">
+                <h4 class="modal-title" id="modal-basic-title">Chekout</h4>            
+                <button type="button" class="close" aria-label="Close" (click)="close()">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="checkoutForm" style="margin: 0vh 4vh 4.5vh 4vh" autocomplete="off">
+                        <div class="form-group">
+                            <label for="areaCode" >Area Code</label>
+                            <input type="text" id="areaCode" class="form-control form-control-sm"
+                                formControlName="areaCode" />
+
+                            <span *ngIf="areaCode?.errors?.['required']" class="error">
+                                Area Code is required
+                            </span>
+                        </div>
+
+                        <div class="form-group" style="margin-top: 10px;">
+                            <label for="phoneNumber">Phone Number</label>
+                            <input type="text" id="phoneNumber" class="form-control form-control-sm"
+                                formControlName="phoneNumber" />
+
+                            <span *ngIf="phoneNumber?.errors?.['required']" class="error">
+                                Phone Number is required
+                            </span>
+                        </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-outline-dark" (click)="onCheckout()">Confirm reservations</button>
+            </div>
+            </ng-template>
+        </div>
     </nav>
 </div>
 <app-reservations-list></app-reservations-list>
