--- a/MovieBooking/MovieBookingSPA/src/app/movies/feature-search/search/search.component.css
+++ b/MovieBooking/MovieBookingSPA/src/app/movies/feature-search/search/search.component.css
@@ -25,10 +25,38 @@
     width: 200px;
 }
 
-.item>img:hover {
+img:hover {
     cursor: pointer;
 }
 
 .arrow{
     cursor: pointer;
 }
+
+.flex-container {
+    display: flex;
+    background-color: DodgerBlue;
+  }
+  
+.flex-container > div {
+    background-color: #f1f1f1;
+    margin: 5px;
+}
+
+.btn {
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    background-color: #f1f1f1;
+    cursor: pointer;
+  }
+  
+  .btn:hover {
+    background-color: #ddd;
+  }
+  
+  .btn.active {
+    background-color: #666;
+    color: white;
+  }
+  
