--- a/MovieBooking/MovieBookingSPA/src/app/movies/feature-search/search/search.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/movies/feature-search/search/search.component.html
@@ -12,15 +12,44 @@
         </select>
         <span *ngIf="arrowUpVisible" class="arrow" style="font-size: 30px; margin-left: 5px;" title="Sort ascending" (click)="toggleArrow()">&uarr;</span>
         <span *ngIf="!arrowUpVisible" class="arrow" style="font-size: 30px; margin-left: 5px;" title="Sort descending" (click)="toggleArrow()">&darr;</span>
+        
+
+        <div id="btnContainer" style="display: inline; margin-left: 20px;">
+          <button [ngClass] = "activeButtonClass('list')" (click)="listView()" style="border-radius: 0">
+            <i class="fa fa-bars"></i> List
+          </button> 
+          <button [ngClass] = "activeButtonClass('grid')" (click)="gridView()" style="border-radius: 0">
+            <i class="fa fa-th-large" style="border-radius: 0"></i> Grid
+          </button>
+        </div>
+
     </div>
 
-    <div id="imagesDIV" style="margin-top: 10px;">
-      <div class="item" *ngFor="let movie of movies">
-        <div>
+    <ng-container *ngIf="listViewActive" >
+      <div class="flex-container" style="height: auto; width: auto; margin: 10px; background-color: rgb(240, 240, 240); border-color:white" *ngFor="let movie of movies">
+          <div>
+            <img [src]="movie.poster" (click)="moviePage(movie.id)" style="height: 200px; width: 140px"/>
+          </div>
+          <div>
+            <div> <b style="font-size: 20px">{{ movie.title }} ({{movie.year}})</b>&nbsp;<i>{{movie.imdbRating !== null ? movie.imdbRating + "/10" : ""}}</i> </div>
+            <div style="font-size: 13px; color: gray; margin-bottom: 10px"> {{movie.genres.join(', ')}} </div>
+            <div> {{movie.plot}} </div>
+            <div style="font-size: 13px; margin-top: 10px"> Director:&nbsp;{{movie.director}} </div>
+            <div style="font-size: 13px;"> Starring:&nbsp;{{movie.mainActors.join(', ')}} </div>
+          </div>
+      </div>
+    </ng-container>
+
+
+    <ng-container *ngIf="!listViewActive" >
+      <div id="imagesDIV" style="margin-top: 10px;">
+        <div class="item" *ngFor="let movie of movies">
+          <div>
             <img [src]="movie.poster" (click)="moviePage(movie.id)"/>
             <span class="caption">{{ movie.title }}</span>
+          </div>
         </div>
       </div>
-    </div>
+    </ng-container>
   
   </div>
