--- a/MovieBooking/MovieBookingSPA/src/app/movies/feature-search/search/search.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/movies/feature-search/search/search.component.html
@@ -1,42 +1,84 @@
 <div>
 
     <div style="text-align: left; margin: 10px;">
-        <span style="margin-right: 10px;">Sort by:</span>
-        <select name="criteria" id="criteria" class="form-select" style="width:auto; display: inline"
-            [(ngModel)]="sortCriteria" (change)="onSelectChange()" [value] = "sortCriteria">
-            <option value="title">Title</option>
-            <option value="year">Year</option>
-            <option value="runtime">Runtime</option>
-            <option value="imdbRating">IMDb Rating</option>
-            <option value="imdbVotes">IMDb Votes</option>
-        </select>
-        <span *ngIf="arrowUpVisible" class="arrow" style="font-size: 30px; margin-left: 5px;" title="Sort ascending" (click)="toggleArrow()">&uarr;</span>
-        <span *ngIf="!arrowUpVisible" class="arrow" style="font-size: 30px; margin-left: 5px;" title="Sort descending" (click)="toggleArrow()">&darr;</span>
-        
+      
+        <div style="display: block">
+          Sort by:
+        </div>
 
-        <div id="btnContainer" style="display: inline; margin-left: 20px;">
+        <select name="criteria" id="criteria" class="form-select" style="width:auto; display: inline"
+          [(ngModel)]="sortCriteria" (change)="onSelectChange()" [value] = "sortCriteria">
+          <option value="title">Title</option>
+          <option value="year">Year</option>
+          <option value="runtime">Runtime</option>
+          <option value="imdbRating">IMDb Rating</option>
+          <option value="imdbVotes">IMDb Votes</option>
+        </select>
+
+        <span *ngIf="arrowUpVisible" class="arrow" style="font-size: 30px; margin-left: 5px;" title="Sort ascending" (click)="toggleArrow()">
+          <i class="fa fa-sort-asc" aria-hidden="true"></i>
+        </span>
+        <span *ngIf="!arrowUpVisible" class="arrow" style="font-size: 30px; margin-left: 5px;" title="Sort descending" (click)="toggleArrow()">
+          <i class="fa fa-sort-desc" aria-hidden="true"></i>
+        </span>
+
+        <div id="btnContainer" style="display: inline; margin-left: 20px; float:right;">
           <button [ngClass] = "activeButtonClass('list')" (click)="listView()" style="border-radius: 0">
             <i class="fa fa-bars"></i> List
           </button> 
           <button [ngClass] = "activeButtonClass('grid')" (click)="gridView()" style="border-radius: 0">
-            <i class="fa fa-th-large" style="border-radius: 0"></i> Grid
+            <i class="fa fa-th" style="border-radius: 0"></i> Grid
           </button>
         </div>
 
+        <div class="form-check" style="display: inline; float:right; margin-top: 10px" title="Include upcoming movies into search">
+          <input class="form-check-input" type="checkbox" value="" id="upcomingMovieCheckout" [(ngModel)]="showUpcomingMovies">
+          <label class="form-check-label" for="upcomingMovieCheckout">
+            Upcoming
+          </label>
+        </div>
+        
     </div>
 
     <ng-container *ngIf="listViewActive" >
-      <div class="flex-container" style="height: auto; width: auto; margin: 10px; background-color: rgb(240, 240, 240); border-color:white" *ngFor="let movie of movies">
-          <div>
-            <img [src]="movie.poster" (click)="moviePage(movie.id)" style="height: 200px; width: 140px"/>
-          </div>
-          <div>
-            <div> <b style="font-size: 20px">{{ movie.title }} ({{movie.year}})</b>&nbsp;<i>{{movie.imdbRating !== null ? movie.imdbRating + "/10" : ""}}</i> </div>
-            <div style="font-size: 13px; color: gray; margin-bottom: 10px"> {{movie.genres.join(', ')}} </div>
-            <div> {{movie.plot}} </div>
-            <div style="font-size: 13px; margin-top: 10px"> Director:&nbsp;{{movie.director}} </div>
-            <div style="font-size: 13px;"> Starring:&nbsp;{{movie.mainActors.join(', ')}} </div>
-          </div>
+      <div class="flex-container" style="height: auto; width: auto; background-color: rgb(240, 240, 240); border-color:white" *ngFor="let movie of movies">
+
+        <ng-container *ngIf="showUpcomingMovies || movie.imdbVotes !== null" style="margin: 10px;">
+
+            <div>
+              <img [src]="movie.poster" (click)="moviePage(movie.id)" style="height: 200px; width: 140px"/>
+            </div>
+            <div>
+              <div>
+                <a routerLink="/movies/{{movie.id}}"><b class="title" style="font-size: 20px">{{ movie.title }} ({{movie.year}})</b></a>&nbsp;
+                <i>{{movie.imdbRating !== null ? movie.imdbRating + "/10" : ""}}</i>
+              </div>
+
+              <div style="font-size: 13px; color: gray; margin-bottom: 10px">
+                <div *ngFor="let genre of movie.genres; let i = index" style="display: inline;">
+                  <a routerLink="/movies/search/genres/{{genre}}">{{genre}}</a>
+                  <span *ngIf="i+1 !== movie.genres.length">,&nbsp;</span>
+                </div>
+              </div>
+
+              <div> {{movie.plot}} </div>
+
+              <div style="font-size: 13px; margin-top: 10px">
+                Director:&nbsp;<a routerLink="/movies/search/director/{{movie.director}}">{{movie.director}}</a>
+              </div>
+
+              <div style="font-size: 13px; ">
+                Starring:
+                <div *ngFor="let actor of movie.mainActors; let i = index" style="display: inline;">
+                  <a routerLink="/movies/search/mainActor/{{actor}}">{{actor}}</a>
+                  <span *ngIf="i+1 !== movie.mainActors.length">,&nbsp;</span>
+                </div>
+              </div>
+            </div>
+
+        </ng-container>
+
+
       </div>
     </ng-container>
 
@@ -44,7 +86,7 @@
     <ng-container *ngIf="!listViewActive" >
       <div id="imagesDIV" style="margin-top: 10px;">
         <div class="item" *ngFor="let movie of movies">
-          <div>
+          <div *ngIf="showUpcomingMovies || movie.imdbVotes !== null">
             <img [src]="movie.poster" (click)="moviePage(movie.id)"/>
             <span class="caption">{{ movie.title }}</span>
           </div>
